# sdl2-basic

./: CMakeLists.txt  README.md  main.cpp
